server: Add detection of repository's default branch, stop assuming "main". Add "branch" and "default_branch" to /export response.
